fix model z-index

--- a/src/components/ModelOverlay/ModelOverlay.module.css
+++ b/src/components/ModelOverlay/ModelOverlay.module.css
@@ -21,6 +21,7 @@
     top: 50%;
     transform: translateY(-50%);
     padding: 30px 10px;
+    z-index: 9999;
 }
 
 .modal .winner {
